tests/ui/async-await/async-closures/async-future-out-must-be-sized.stderr
error[E0277]: the size for values of type `dyn Future<Output = ()>` cannot be known at compilation time
  --> $DIR/async-future-out-must-be-sized.rs:17:17
   |
LL |     is_async_fn(foo());
   |     ----------- ^^^^^ doesn't have a size known at compile-time
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Sized` is not implemented for `dyn Future<Output = ()>`
note: required by a bound in `is_async_fn`
  --> $DIR/async-future-out-must-be-sized.rs:12:30
   |
LL | async fn is_async_fn(f: impl AsyncFn()) {
   |                              ^^^^^^^^^ required by this bound in `is_async_fn`

error[E0277]: the size for values of type `dyn Future<Output = ()>` cannot be known at compilation time
  --> $DIR/async-future-out-must-be-sized.rs:17:5
   |
LL |     is_async_fn(foo());
   |     ^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `dyn Future<Output = ()>`
note: required by a bound in `is_async_fn`
  --> $DIR/async-future-out-must-be-sized.rs:12:30
   |
LL | async fn is_async_fn(f: impl AsyncFn()) {
   |                              ^^^^^^^^^ required by this bound in `is_async_fn`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
